used immutable list in CsvReader, updated incrementX and ofOperations methods in Report class, updated WorkWithFile getStatistics to updated methods usage